force-app/main/default/objects/Incident__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>