force-app/main/default/objects/Incident__c/fields/AI_Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>AI_Impact_Level__c</fullName>
    <label>AI Impact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>