force-app/main/default/objects/Incident__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>