force-app/main/default/objects/Incident__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>API Timeout</fullName><default>false</default><label>API Timeout</label></value>
            <value><fullName>Auth Failure</fullName><default>false</default><label>Auth Failure</label></value>
            <value><fullName>OAuth Token Expiry</fullName><default>false</default><label>OAuth Token Expiry</label></value>
            <value><fullName>Webhook Failure</fullName><default>false</default><label>Webhook Failure</label></value>
            <value><fullName>Flow Error</fullName><default>false</default><label>Flow Error</label></value>
            <value><fullName>Apex Exception</fullName><default>false</default><label>Apex Exception</label></value>
            <value><fullName>Silent Failure</fullName><default>false</default><label>Silent Failure</label></value>
            <value><fullName>Stalled Integration</fullName><default>false</default><label>Stalled Integration</label></value>
            <value><fullName>Payment Sync Failure</fullName><default>false</default><label>Payment Sync Failure</label></value>
            <value><fullName>ERP Sync Failure</fullName><default>false</default><label>ERP Sync Failure</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>