force-app/main/default/objects/Incident__c/fields/Integration_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Integration_Endpoint__c</fullName>
    <label>Integration Endpoint</label>
    <type>Lookup</type>
    <referenceTo>Integration_Endpoint__c</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <relationshipLabel>Incidents</relationshipLabel>
    <description>Links this incident to the monitored endpoint that generated it.</description>
</CustomField>