force-app/main/default/objects/Incident__c/fields/Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum allowed self-healing retries for this incident.</description>
    <label>Max Retry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>