force-app/main/default/objects/Incident__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>