force-app/main/default/objects/Incident__c/fields/Resolved_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Time__c</fullName>
    <label>Resolved Time</label>
    <type>DateTime</type>
</CustomField>