force-app/main/default/objects/Incident__c/fields/Revenue_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Revenue_at_Risk__c</fullName>
    <label>Revenue at Risk</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>