force-app/main/default/objects/Incident__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>