force-app/main/default/objects/Incident__c/fields/Self_Heal_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Self_Heal_Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Heal Attempted</label>
    <type>Checkbox</type>
</CustomField>