force-app/main/default/objects/Incident__c/fields/SLA_Policy__c.field-meta.xml
<CustomField>
    <fullName>SLA_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA Policy</label>
    <referenceTo>SLA_Policy__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>