force-app/main/default/objects/Incident__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>The tenant (company) this incident belongs to. Used for multi-tenant data isolation.</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>