force-app/main/default/objects/Incident__c/listViews/All_Incidents.listView-meta.xml
<ListView>
    <fullName>All_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>All Incidents</label>
</ListView>