force-app/main/default/objects/Incident__c/listViews/Critical_Incidents.listView-meta.xml
<ListView>
    <fullName>Critical_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Critical Incidents</label>
</ListView>