force-app/main/default/objects/Incident__c/listViews/Open_Incidents.listView-meta.xml
<ListView>
    <fullName>Open_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Incidents</label>
</ListView>